Ajustes da página inicial

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 
 <!-- Mirrored from html.commonsupport.xyz/2017/trade/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 21 Dec 2020 12:23:05 GMT -->
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-185494686-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-185494686-1');
+</script>
+
 	<meta charset="UTF-8">
 	<title>Início</title>
 
@@ -202,7 +212,7 @@
                     data-responsive_offset="on"
                     data-start="2000">
                     <div class="slide-content-box mar-lft">
-                        <p>Com a FOCUS Trading<br> você está a 1 passo da sua consistência.</p>
+                        <p>Com a FOCUS Trading<br> Você está a 1 passo da sua consistência.</p>
                     </div>
                 </div>
                 <div class="tp-caption tp-resizeme" 
@@ -277,11 +287,7 @@
                     data-start="700">
                     <div class="slide-content-box lastslide">
                        <h1>Nenhuma oportunidade lhe cai do céu<br> Nós as criamos</h1>
-                        <p>A successful man is one who can lay a firm foundation with the<br> bricks others have thrown at him. </p>
-                        <div class="button">
-                            <a class="thm-btn" href="#">Our Solutions</a> 
-                            <a class="thm-btn remdmore" href="#">Read More</a>      
-                        </div>
+                        <p>Para ter sucesso você precisa ter o coração nas suas crenças<br> as suas crenças no seu coração.</p>
                     </div>
                 </div>
             </li>
@@ -348,7 +354,7 @@
     <div class="container">
         <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
             <div class="who-we-are-img-holder">
-                <img src="images/logo/white_logo_color_background 2.jpg" alt="Awesome Image" width="200" height="300">
+                <img src="images/logo/logo_transparent_background 2.png" style="position: relative; right: 40%;" alt="Awesome Image" width="500" height="500">
             </div>
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
@@ -378,24 +384,23 @@
 <!--End who we are-->
  
 <!--Start service area-->
-<section class="service-area" style="background-image:url(images/imgs/pexels-burak-k-186461.jpg);">
+<section class="service-area" style="background-image:url(images/imgs/2481595.jpg);">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="sec-title pull-left">
-                    <h1><span>O que <b>Ensinamos?</b></span></h1>
+                    <h1><span>O que Ensinamos?</span></h1>
                 </div>
-                <div class="more-service pull-right">
-                    <a href="services.html">More Services</a>    
+                <div class="more-service pull-right">   
                 </div>
             </div>
         </div>
         <div class="row">
             <!--Start single service item-->
             <div class="col-md-4 col-sm-12 col-xs-12">
-                <div class="single-service-item">
+                <div class="single-service-item" width="50" height="50">
                     <div class="img-holder">
-                        <img src="images/services/1.jpg" alt="Awesome Image">
+                        <img src="images/imgs/2481595.jpg" alt="Awesome Image" >
                         <div class="overlay-style-one">
                             <div class="box">
                                 <div class="content">
@@ -405,17 +410,17 @@
                         </div>
                     </div>
                     <div class="text-holder">
-                        <a href="ser-financial.html"><h3>Financial Services</h3></a>
-                        <p>Business Financial Services, Inc. provides business cash advances to small business owners...</p>
+                        <a href="ser-financial.html"><h3>Opções Binárias</h3></a>
+                        <p>Ensinamos te a ser um trader lucrativo e a adquirir a tua independência financeira...</p>
                     </div>    
                 </div>
             </div>
             <!--End single service item-->
             <!--Start single service item-->
-            <div class="col-md-4 col-sm-12 col-xs-12">
-                <div class="single-service-item">
+            <div class="col-md-4 col-sm-12 col-xs-12" width="50" height="50">
+                <div class="single-service-item" >
                     <div class="img-holder">
-                        <img src="images/services/2.jpg" alt="Awesome Image">
+                        <img src="images/imgs/2481555.jpg" alt="Awesome Image" width="100" height="100">
                         <div class="overlay-style-one">
                             <div class="box">
                                 <div class="content">
@@ -426,16 +431,16 @@
                     </div>
                     <div class="text-holder">
                         <a href="ser-trades-stocks.html"><h3>Trades & Stocks</h3></a>
-                        <p>Trading stocks as a home business can help a person gain financial and lifestyle ...</p>
+                        <p>Ensinamoes-te também a operar no mercado de forex e de ações</p>
                     </div>    
                 </div>
             </div>
             <!--End single service item-->
             <!--Start single service item-->
             <div class="col-md-4 col-sm-12 col-xs-12">
-                <div class="single-service-item">
+                <div class="single-service-item" width="50" height="50">
                     <div class="img-holder">
-                        <img src="images/services/3.jpg" alt="Awesome Image">
+                        <img src="images/imgs/4421069.jpg" alt="Awesome Image" width="100" height="100">
                         <div class="overlay-style-one">
                             <div class="box">
                                 <div class="content">
@@ -445,8 +450,8 @@
                         </div>
                     </div>
                     <div class="text-holder">
-                        <a href="ser-strategic-planning.html"><h3>Strategic Planning</h3></a>
-                        <p>Strategic planning is an organizational management activity that is used to set...</p>
+                        <a href="ser-strategic-planning.html"><h3>Gerenciamento</h3></a>
+                        <p>Te oferecemos um sistema de gerenciamento completo para mantê-lo organizado de seguro</p>
                     </div>    
                 </div>
             </div>
@@ -458,11 +463,11 @@
 <!--End service area-->
 
 <!--Start fact counter area-->
-<section class="fact-counter-area">
+<!--section class="fact-counter-area">
     <div class="container">
         <div class="row">
-            <!--Start single item-->
-            <div class="col-md-3 col-sm-6 col-xs-12">
+            <Start single item-->
+            <!--div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="single-item text-center">
                     <div class="icon-holder">
                         <span class="flaticon-specialist-user"></span>   
@@ -471,9 +476,9 @@
                     <h3>Happy Customers</h3>
                 </div>
             </div>
-            <!--End single item-->
+            <End single item-->
             <!--Start single item-->
-            <div class="col-md-3 col-sm-6 col-xs-12">
+            <!--div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="single-item text-center">
                     <div class="icon-holder">
                         <span class="flaticon-projector"></span>   
@@ -482,9 +487,9 @@
                     <h3>Works Completed</h3>
                 </div>
             </div>
-            <!--End single item-->
+            <End single item-->
             <!--Start single item-->
-            <div class="col-md-3 col-sm-6 col-xs-12">
+            <!--div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="single-item text-center">
                     <div class="icon-holder">
                         <span class="flaticon-trophy"></span>  
@@ -493,9 +498,8 @@
                     <h3>Awards Won</h3>
                 </div>
             </div>
-            <!--End single item-->
-            <!--Start single item-->
-            <div class="col-md-3 col-sm-6 col-xs-12">
+            <single item-->
+            <!--div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="single-item text-center">
                     <div class="icon-holder">
                         <span class="flaticon-planet-earth"></span>   
@@ -504,11 +508,10 @@
                     <h3>Global Branches</h3>
                 </div>
             </div>
-            <!--End single item-->
             
         </div>
     </div>
-</section>
+</section-->
 <!--End fact counter area--> 
 
 <!--Start Testimonial area-->
@@ -678,13 +681,13 @@
 <!--End Testimonial area-->
 
 <!--Start slogan area v2-->
-<section class="slogan-area-v2" style="background-image:url(images/resources/slogan-bg.jpg);">
+<section class="slogan-area-v2" style="background-image:url(images/imgs/1267556.jpg);">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="inner-content text-center wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
-                    <h1>Ideas are easy. Implementation is hard, so lets start<br> work as soon as possible</h1>
-                    <a class="thm-btn bgclr-1" href="#">Make an Appointment</a>
+                    <h1>Todos têm a capacidade de escolher a vida que querem mas uns decidem deixar pra depois</h1>
+                    <a class="thm-btn bgclr-1" href="#">Deixe um depoimento</a>
                 </div>
             </div>
         </div>
@@ -801,31 +804,31 @@
             <div class="col-md-7">
                 <div class="left-content">
                     <div class="sec-title">
-                        <h1><span>Customer <b>FAQ’s</b></span></h1>
+                        <h1><span>Clientes <b>FAQ’s</b></span></h1>
                     </div>
                     <div class="accordion-box">
                         <!--Start single accordion box-->
                         <div class="accordion accordion-block">
-                            <div class="accord-btn"><h4>What is a business organization?</h4></div>
+                            <div class="accord-btn"><h4>O que é emocional?</h4></div>
                             <div class="accord-content">
-                                <p>A firm is a business organization, such as a corporation, limited liability company or partnership, that sells goods or services to make a profit. ... "Firm" is often used interchangeably with "business" or "enterprise."</p>
+                                <p>A capacidade de controle emocional na vida de um trader é uma ferramenta fundamental para o sucesso na área. Nas flutuações diárias do mercado, e principalmente, nos dias mais difíceis e turbulentos da bolsa, manter a calma e saber lidar com as emoções é essencial para seguir as estratégias traçadas</p>
                             </div>
                         </div>
                         <!--End single accordion box--> 
                         <!--Start single accordion box-->
                         <div class="accordion accordion-block">
-                            <div class="accord-btn active"><h4>What is a business entity?</h4></div>
+                            <div class="accord-btn active"><h4>O que é operacional</h4></div>
                             <div class="accord-content collapsed">
-                                <p>A business entity is an entity that is formed and administered as per commercial law in order to engage in business activities, charitable work, or other activities allowable. Most often, business entities are formed to sell.</p>
+                                <p>É de extrema imperatividade com que um trader conheça o seu tipo operacional, desenvolver ou escolher um tipo operacional que se adeque ao seu perfil trader, pós, isso irá contribuir para o seu sucesso no mercado financeiro.</p>
                             </div>
                         </div>
                         <!--End single accordion box-->
 
                         <!--Start single accordion box-->
                         <div class="accordion accordion-block last-child">
-                            <div class="accord-btn last"><h4>What is the meaning of tax entity?</h4></div>
+                            <div class="accord-btn last"><h4>O que é Gerenciamento?</h4></div>
                             <div class="accord-content">
-                                <p>Some business entities are considered for federal tax purposes to be not separate from its owner. Such is the case with single-member limited liability companies and sole proprietors. The income and deductions related.</p>
+                                <p>O gerenciamento de riscos faz parte da rotina de quem atua no mercado financeiro, afinal, quem investe também está exposto a perdas. Por isso, antes mesmo de começar a operar, é fundamental se planejar e tentar reduzir ao máximo essas possibilidades.</p>
                             </div>
                         </div>
                         <!--End single accordion box-->
@@ -840,13 +843,13 @@
                     <form id="quote-form" action="#">
                         <div class="row">
                             <div class="col-md-12">
-                                <input type="text" name="form_name" value="" placeholder="Your Name*" required="">
-                                <input type="email" name="form_email" value="" placeholder="Your Mail*" required="">
-                                <input type="text" name="form_phone" value="" placeholder="Your Phone*" required="">
+                                <input type="text" name="form_name" value="" placeholder="Nome*" required="">
+                                <input type="email" name="form_email" value="" placeholder="Email*" required="">
+                                <input type="text" name="form_phone" value="" placeholder="Phone*" required="">
                                 <select class="selectmenu">
-                                    <option selected="selected">Select Service</option>
-                                    <option>Financial Projections</option>
-                                    <option>Trades & Stocks</option>
+                                    <option selected="selected">Seleccione o serviço</option>
+                                    <option>Opções Binárias</option>
+                                    <option>Forex</option>
                                     <option>Strategic Planning</option>
                                     <option>Market Analysis</option>
                                     <option>Material Engineering</option>
@@ -869,7 +872,7 @@
 <section class="latest-blog-area">
     <div class="container">
         <div class="sec-title text-center">
-            <h1><span>Latest <b>News</b></span></h1>
+            <h1><span>Calendário <b>Econômico</b></span></h1>
         </div> 
         <div class="row">
             <!--Start single blog item-->
@@ -1054,10 +1057,10 @@
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="single-footer-widget pd-bottom50">
                     <div class="title">
-                        <h3>about Us</h3>
+                        <h3>quem somos</h3>
                     </div>
                     <div class="about-us">
-                        <p>Trade Company give master counseling, budgetary guidance. More than 25 years of experience we guarantee you continually getting the great direction from the best individuals in the whole of fund industry.</p>
+                        <p>Focus trading é uma Empresa especializada em treinamento para operadores e investidores no mercado financeiro. Actuamos no mercado de opções binárias, acções e Criptomoedas. .</p>
                         <ul class="footer-social-links">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -1075,12 +1078,11 @@
                         <h3>Usefull Links</h3>
                     </div>
                     <ul class="usefull-links">
-                        <li><a href="ser-financial.html">Financial Projections</a></li>
+                        <li><a href="ser-financial.html">Sistema de gerenciamento</a></li>
                         <li><a href="ser-trades-stocks.html">Trades & Stocks</a></li>
                         <li><a href="ser-strategic-planning.html">Strategic Planning</a></li>
-                        <li><a href="ser-market-analysis.html">Market Analysis</a></li>
+                        <li><a href="ser-market-analysis.html">Cursos</a></li>
                         <li><a href="ser-investment.html">Investment</a></li>
-                        <li><a href="ser-business-growth.html">Business Growth</a></li>
                     </ul>
                 </div>
             </div>
@@ -1177,7 +1179,7 @@
                         <h3>Newsletter</h3>
                     </div>
                     <div class="newsletter-form">
-                        <p>Subscribe to our nesletter, We don’t do mail to spam & your mail id is very confidential.</p> 
+                        <p>Assine nosso boletim informativo, e receba novidades no seu email.</p> 
                         <form action="#">
                             <input type="email" name="email" placeholder="Email address">
                             <div class="icon-holder">
