Ajuste do menú opções binárias

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                         <span class="flaticon-doctor"></span>    
                     </div>
                     <div class="content">
-                        <h3>PROFESSIONALISMO</h3>
+                        <h3>PROFISSIONALISMO</h3>
                         <p>Torne-se um trader profissional e consistente com os melhores cursos da Web</p>
                     </div>
                 </div>
@@ -323,7 +323,7 @@
     <div class="container">
         <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
             <div class="who-we-are-img-holder">
-                <img src="images/logo/logo_transparent_background 2.png" style="position: relative; right: 40%; width: 100%; height: 100%;" alt="Awesome Image">
+                <img src="images/logo/logo_transparent_background 2.png" style="position: relative; right: 20%; width: 100%; height: 100%;" alt="Awesome Image">
             </div>
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
@@ -473,7 +473,7 @@
     <div class="container">
         <div class="sec-title text-center">
             <h1><span>Porquê a  <b>FOCUS Trading</b></span></h1>
-            <p>A FOCUS Trading reúne uma equipe preparada e bem empenhada com o propósito de garantir que os seus estudantes tenham o melhor material do mercado, os alunos recebem manuais para o acompanhamento das aulas.</p>
+            <p>A FOCUS Trading reúne uma equipe preparada e bem empenhada com o propósito de garantir que os seus alunos tenham o melhor material do mercado, os alunos recebem manuais para o acompanhamento das aulas.</p>
         </div>
         <div class="row">
             <!--Start single industry expertise item-->
@@ -497,7 +497,7 @@
                     </div>
                     <div class="content">
                         <h3>Forma organizada de trabalhar</h3>
-                        <p>Somos focados em criar melhores condições de aprendizado, organizando material e conteúdo necessário para o melhor bom aproveitamento dos nossos estudantes.</p>
+                        <p>Somos focados em criar melhores condições de aprendizado, organizando material e conteúdo necessário para o melhor bom aproveitamento dos nossos alunos.</p>
                     </div>    
                 </div>
             </div>
@@ -512,7 +512,7 @@
                     </div>
                     <div class="content">
                         <h3>Experiência</h3>
-                        <p>Os módulos, os conteúdos e os serviços são ministrados pelos nosso profissionais com muita experiência nos seus ramos de actuação.</p>
+                        <p>Os módulos, os conteúdos e os serviços são ministrados pelos nossos profissionais com muita experiência nos seus ramos de actuação.</p>
                     </div>    
                 </div>
             </div>
