Ajuste da page contacts e about

--- a/index.html
+++ b/index.html
@@ -89,62 +89,43 @@
 </section>   
 <!--End header area-->    
 
-<!--Start mainmenu area-->
-<section class="mainmenu-area stricky">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <!--Start mainmenu-->
-                <nav class="main-menu pull-left">
-                    <div class="navbar-header">   	
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-
-                    <div class="navbar-collapse collapse clearfix">
-                        <ul class="navigation clearfix">
-                            <li class="current"><a href="index.html">Início </a></li>
-                            <li class="dropdown"><a href="about.html">Quem somos</a>
-                                <ul>
-                                    <li><a href="about.html">About Company</a></li>
-                                    <li><a href="team.html">Our Team</a></li>
-                                    <li><a href="testimonials.html">Testimonials</a></li>
-                                    <li><a href="faq.html">FAQ’s</a></li>
-                                    <li><a href="404.html">404 Page</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown"><a href="services.html">Serviços</a>
-                                <ul>
-                                    <li><a href="ser-financial.html">Opções binárias</a></li>
-                                    <li><a href="ser-trades-stocks.html">Trades & Stocks</a></li>
-                                    <li><a href="ser-strategic-planning.html">Strategic Planning</a></li>
-                                    <li><a href="ser-market-analysis.html">Market Analysis</a></li>
-                                    <li><a href="ser-investment.html">Investment</a></li>
-                                    <li><a href="ser-business-growth.html">Business Growth</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown"><a href="shop.html">GrowApp</a>
-                                <ul>
-                                    <li><a href="shop.html">Shop Products</a></li>
-                                    <li><a href="shop-single.html">Products Single</a></li>
-                                    <li><a href="shopping-cart.html">Shopping Cart</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
-                                    <li><a href="account.html">My Account</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="contact.html">Contacte-nos</a></li>
-                        </ul>
-                    </div>
-                </nav>
-                <!--End mainmenu-->    
+ <!--Start mainmenu area-->
+         <section class="mainmenu-area stricky">
+            <div class="container">
+               <div class="row">
+                  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                     <!--Start mainmenu-->
+                     <nav class="main-menu pull-left">
+                        <div class="navbar-header">     
+                           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                           <span class="icon-bar"></span>
+                           <span class="icon-bar"></span>
+                           <span class="icon-bar"></span>
+                           </button>
+                        </div>
+                        <div class="navbar-collapse collapse clearfix">
+                           <ul class="navigation clearfix">
+                              <li class="dropdown current"><a href="index.html">Início</a></li>
+                              <li class="dropdown">
+                                 <a href="about.html">Quem somos</a>
+                              </li>
+                              <li class="dropdown">
+                                 <a href="#">Serviços</a>
+                                 <ul>
+                                    <li><a href="serv_ob.html">Opções binárias</a></li>
+                                    <li><a href="ser-trades-stocks.html">GrowApp</a></li>
+                                 </ul>
+                              </li>
+                              <li><a href="contact.html">Contacto</a></li>
+                           </ul>
+                        </div>
+                     </nav>
+                     <!--End mainmenu-->
+                  </div>
+               </div>
             </div>
-        </div>
-    </div>
-</section>
-<!--End mainmenu area-->
+         </section>
+         <!--End mainmenu area-->
 
 <!--Start rev slider wrapper-->     
 <section class="rev_slider_wrapper">
