--- a/serv_ob.html
+++ b/serv_ob.html
@@ -2,15 +2,6 @@
 <html lang="en">
    <!-- Mirrored from html.commonsupport.xyz/2017/trade/ser-financial.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 21 Dec 2020 12:27:53 GMT -->
    <head>
-       <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-185494686-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-185494686-1');
-</script>
       <meta charset="UTF-8">
       <title>Opções Binárias</title>
       <!-- responsive meta -->
@@ -100,11 +91,18 @@
                               <li><a href="index.html">Início</a></li>
                               <li class="dropdown">
                                  <a href="about.html">Quem somos</a>
+                                 <ul>
+                                    <li><a href="about.html">About Company</a></li>
+                                    <li><a href="team.html">Our Team</a></li>
+                                    <li><a href="testimonials.html">Testimonials</a></li>
+                                    <li><a href="faq.html">FAQ’s</a></li>
+                                    <li><a href="404.html">404 Page</a></li>
+                                 </ul>
                               </li>
                               <li class="dropdown current">
-                                 <a href="#">Serviços</a>
+                                 <a href="services.html">Serviços</a>
                                  <ul>
-                                    <li><a href="serv_ob.html">Opções binárias</a></li>
+                                    <li><a href="ser-financial.html">Opções binárias</a></li>
                                     <li><a href="ser-trades-stocks.html">GrowApp</a></li>
                                  </ul>
                               </li>
