--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                         </div>
                     </div>
                     <div class="text-holder">
-                        <a href="ser-financial.html"><h3>Curso de Opções Binárias</h3></a>
+                        <a href="serv_ob.html"><h3>Curso de Opções Binárias</h3></a>
                         <p>Ensinamos te a ser um trader lucrativo e a adquirir a tua independência financeira...</p>
                     </div>    
                 </div>
@@ -377,7 +377,7 @@
                         <div class="overlay-style-one">
                             <div class="box">
                                 <div class="content">
-                                    <a href="ser-strategic-planning.html"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="serv_ga.html"><i class="fa fa-link" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -633,7 +633,7 @@
                     <h2>Nós lhe ajudamos nesta batalha rumo a consistência.</h2>
                 </div>
                 <div class="button pull-right">
-                    <a href="#">Contacte-nos</a>
+                    <a href="contact.html">Contacte-nos</a>
                 </div>
             </div>
         </div>
