--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <!-- Mirrored from html.commonsupport.xyz/2017/trade/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 21 Dec 2020 12:27:18 GMT -->
 <head>
 	<meta charset="UTF-8">
-	<title>FOCUS || Quem somos</title>
+	<title>FOCUS | Quem somos</title>
 
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,7 +41,7 @@
             <div class="col-lg-4 col-md-3">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/logo/PLUS/audio.png" alt="Awesome Logo" width="200" height="300">
+                        <img src="images/logo/PLUS/logo_transparent_background.png" alt="Awesome Logo" width="200" height="300">
                     </a>
                 </div>
             </div>
