--- a/serv_ga.html
+++ b/serv_ga.html
@@ -42,7 +42,7 @@
                   <div class="col-lg-4 col-md-3">
                      <div class="logo">
                         <a href="index.html">
-                        <img src="images/logo/PLUS/audio.png" alt="Awesome Logo" width="200" height="300">
+                        <img src="images/logo/PLUS/logo_transparent_background.png" alt="Awesome Logo" width="200" height="300">
                         </a>
                      </div>
                   </div>
