--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
 	<!-- Responsive stylesheet -->
 	<link rel="stylesheet" href="css/responsive.css">
     <!-- Favicon -->
-      <link rel="apple-touch-icon" sizes="180x180" href="images/logo/logo_white_background.png">
-    <link rel="icon" type="image/png" href="images/logo/logo_white_background.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="images/logo/logo_white_background.png" sizes="16x16">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/logo/logo_transparent_backgroun.png">
+    <link rel="icon" type="image/png" href="images/logo/logo_transparent_backgroun.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="images/logo/logo_transparent_backgroun.png" sizes="16x16">
     
 
     <!-- Fixing Internet Explorer-->
@@ -129,17 +129,6 @@
 	        </div>
 	    </div>
 	</div>
-    <div class="breadcrumb-botton">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <ul class="left pull-left">
-                        <li class="active">Quem somos</li>
-                    </ul>   
-                </div>
-            </div>
-        </div>
-    </div>
 </section>
 <!--End breadcrumb area--> 
  
@@ -147,34 +136,25 @@
 <section class="success-story-area">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-md-12">
-                <div class="video-holder">
-                    <img src="images/about/video-gallery-img.jpg" alt="Awesome Video Gallery">
-                    <div class="overlay-gallery">
-                        <div class="icon-holder">
-                            <div class="icon">
-                                <a class="html5lightbox" title="Trade Video Gallery" href="https://www.youtube.com/watch?v=hsRRMaX_neg"><img src="images/icon/play-btn.png" alt="Play Button"></a>   
-                            </div>
-                        </div>    
-                    </div>
-                </div>
+           <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+            <div class="who-we-are-img-holder">
+                <img src="images/logo/logo_transparent_background copy.png" style="position: relative; right: 20%; width: 100%; height: 100%;" alt="Awesome Image">
             </div>
+        </div>
             <div class="col-lg-6 col-md-12">
                 <div class="text-holder">
                     <div class="sec-title">
-                        <h1><span>Our Success <b>Story</b></span></h1>
+                        <h1><span>Nosso <b>Objectivo</b></span></h1>
                     </div>
                     <div class="text">
-                        <p>We have constructed an advantageous notoriety in the shopper merchandise, substantial industry, innovative, producing, therapeutic, recreational vehicle, and transportation parts. multidisciplinary group of designing specialists, who adores or seeks after or wants to get agony of itself, since it is torment sometimes.</p>
-                        <h3>Find out how we can work with you.</h3>
-                        <p>These days are all share them with me oh baby. Now the world don't move to the beat of just one drum. What might be right for you may not be right for some. And you know where you were then.</p>
+                        <p>Oferecer uma educação completa no mercado financeiro, a Focus Protrading oferece cursos desde o nível iniciante até o mais avançado. Oferecemos a melhor experiência para os nossos alunos, contamos com grandes profissionais que atuam diretamente na área, que irão te auxiliar durante e após o curso. Além de ministrar aulas, nossos profissionais atuam ativamente no mercado financeiro, trazendo a experiência educacional para prática operacional.</p>
+                        <h3>Estudantes da Focus Protrading.</h3>
+                        <p>Garantimos aos nossos estudantes algumas competências que serão adquiridas nos nossos cursos.</p>
                     </div>
                     <ul>
-                        <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Digital Marketing Manager</li>
-                        <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Quality Control Coordinator</li>
-                        <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Certified Financial Planner</li>
-                        <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Portfolio Management Marketing</li>
-                        <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Employee Relations Specialist</li>
+                        <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Sucesso e consistência</li>
+                        <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Mentor</li>
+                        <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Análise do mercado</li>
                     </ul>
                 </div>   
             </div>
