--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 	<!-- Responsive stylesheet -->
 	<link rel="stylesheet" href="css/responsive.css">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="images/logo/logo_white_background.png">
-    <link rel="icon" type="image/png" href="images/logo/logo_white_background.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="images/logo/logo_white_background.png" sizes="16x16">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/logo/logo_transparent_backgroun.png">
+    <link rel="icon" type="image/png" href="images/logo/logo_transparent_backgroun.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="images/logo/logo_transparent_backgroun.png" sizes="16x16">
     
 
     <!-- Fixing Internet Explorer-->
@@ -51,7 +51,7 @@
             <div class="col-lg-4 col-md-3">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/logo/PLUS/logo_transparent_background.png" alt="Awesome Logo" width="200" height="300">
+                        <img src="images/logo/logo_transparent_background_s.png" alt="Awesome Logo" width="70" height="70">
                     </a>
                 </div>
             </div>
@@ -304,7 +304,7 @@
     <div class="container">
         <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
             <div class="who-we-are-img-holder">
-                <img src="images/logo/logo_transparent_background 2.png" style="position: relative; right: 20%; width: 100%; height: 100%;" alt="Awesome Image">
+                <img src="images/logo/logo_transparent_background copy.png" style="position: relative; right: 20%; width: 100%; height: 100%;" alt="Awesome Image">
             </div>
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
@@ -315,17 +315,8 @@
                 <div class="text">
                     <p>Focus Trading é uma empresa especializada em treinamento para operadores e investidores no mercado financeiro. Actuamos no mercado de opções binárias, acções e Criptomoedas. Oferecemos os melhores treinamentos e melhores materiais. </p>
                 </div>
-                <div class="founder clearfix">
-                    <div class="img-holder">
-                        <img src="images/resources/founder.png" alt="Awesome Image">
-                    </div>
-                    <div class="name">
-                        <h3>Ben Afflick</h3>
-                        <p>Founder & CEO</p>
-                    </div>
-                </div>
                 <div class="bottom">
-                    <a class="readmore thm-btn bgclr-1" href="#">Read More</a>
+                    <a class="readmore thm-btn bgclr-1" href="about.html">Mais detalhes</a>
                 </div>
             </div>
         </div>
